k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-server
  labels:
    app: chat-server
spec:
  selector:
    matchLabels:
      app: chat-server
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: chat-server
    spec:
      containers:
        - name: chat-server
          image: "kuzoncby/spring-boot-websocket-chat-demo:1.0.0"
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: 5273
            initialDelaySeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 5273
            initialDelaySeconds: 15
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 5273
              name: chat-server
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: chat-server
spec:
  selector:
    app: chat-server
  type: ClusterIP
  ports:
    - name: chat-server
      port: 5273
      targetPort: 5273
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-server
spec:
  rules:
    - host: chat.apps.ms.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-server
                port:
                  number: 5273
